--- a/package.json
+++ b/package.json
@@ -7,37 +7,27 @@
 		"url": "http://gomakethings.com"
 	},
 	"license": "MIT",
-	"openSource": {
-		"credits": "https://github.com/toddmotto/fluidvids, http://prismjs.com, https://github.com/filamentgroup/loadJS/, https://github.com/filamentgroup/loadCSS, https://github.com/bramstein/fontfaceobserver, https://github.com/muffinresearch/payment-icons, https://nosir.github.io/cleave.js/"
-	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/pawsnewengland/paws-donate"
 	},
 	"devDependencies": {
-		"gulp": "^3.9.1",
-		"node-fs": "^0.1.7",
-		"del": "^2.2.2",
-		"lazypipe": "^1.0.1",
-		"gulp-plumber": "^1.1.0",
-		"gulp-flatten": "^0.3.1",
-		"gulp-tap": "^0.1.3",
-		"gulp-rename": "^1.2.2",
-		"gulp-header": "^1.8.8",
-		"gulp-footer": "^1.0.5",
-		"gulp-watch": "^4.3.11",
-		"gulp-livereload": "^3.8.1",
-		"jshint": "^2.9.4",
-		"gulp-jshint": "^2.0.4",
-		"jshint-stylish": "^2.2.1",
-		"gulp-concat": "^2.6.1",
-		"gulp-uglify": "^2.1.2",
-		"gulp-optimize-js": "^1.1.0",
-		"gulp-sass": "^3.1.0",
-		"gulp-cssnano": "^2.1.2",
-		"gulp-autoprefixer": "^3.1.1",
-		"gulp-svgmin": "^1.2.3",
-		"gulp-markdown": "^1.2.0",
-		"gulp-file-include": "^0.14.0"
+		"gulp": "4.0.0",
+		"del": "3.0.0",
+		"lazypipe": "1.0.1",
+		"gulp-flatmap": "1.0.2",
+		"gulp-header": "2.0.5",
+		"gulp-rename": "1.4.0",
+		"jshint": "2.9.6",
+		"gulp-jshint": "2.1.0",
+		"jshint-stylish": "2.2.1",
+		"gulp-concat": "2.6.1",
+		"gulp-uglify": "3.0.1",
+		"gulp-optimize-js": "1.1.0",
+		"gulp-sass": "4.0.2",
+		"gulp-cssnano": "2.1.3",
+		"gulp-autoprefixer": "6.0.0",
+		"gulp-svgmin": "2.1.0",
+		"browser-sync": "2.26.3"
 	}
 }
